syntax = "proto3";
package plugin.test.v1;

service TestService {
  rpc Test(TestRequest) returns (TestResponse);
}

message TestRequest {
  string request = 1;
}

message TestResponse {
  string response = 1;
}
